<resources>
    <string name="app_name">Fan Merchandise</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="temporary_text">Temporary Text</string>
    <string name="sign_up_button_text">Sign Up</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="create_account_button_text">Create Account</string>
    <string name="label_street_line_1">Street Line 1:</string>
    <string name="label_street_line_2">Street Line 2:</string>
    <string name="label_city">City:</string>
    <string name="label_state">State:</string>
    <string name="button_label_back">Back</string>
    <string name="button_label_next">Next</string>
    <string name="label_zip_code">Zip:</string>
</resources>
