<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/app_padding"
    tools:context=".view.auth.RegisterAddressFragment">

    <TextView
        android:id="@+id/text_view_street_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="@dimen/margin_top_view"
        android:text="@string/label_street_line_1"/>

    <EditText
        android:id="@+id/edit_text_street_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_view_street_one"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="textPostalAddress" />

    <TextView
        android:id="@+id/text_view_street_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_text_street_one"
        android:layout_marginTop="@dimen/margin_text"
        android:layout_alignParentStart="true"
        android:text="@string/label_street_line_2"/>

    <EditText
        android:id="@+id/edit_text_street_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_view_street_two"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="textPostalAddress" />

    <TextView
        android:id="@+id/text_view_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_text"
        android:layout_below="@+id/edit_text_street_two"
        android:layout_alignParentStart="true"
        android:text="@string/label_city"/>

    <EditText
        android:id="@+id/edit_text_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_view_city"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="textPostalAddress" />

    <TextView
        android:id="@+id/text_view_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_text_city"
        android:layout_marginTop="@dimen/margin_text"
        android:layout_alignParentStart="true"
        android:text="@string/label_state"/>

    <Spinner
        android:id="@+id/spinner_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_view_state"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_text" />

    <Button
        android:id="@+id/button_address_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/app_padding"
        android:text="@string/button_label_back"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true" />

    <Button
        android:id="@+id/button_address_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/app_padding"
        android:text="@string/button_label_next"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true" />

</RelativeLayout>